// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`outlet > using "end" elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        Page
      </div>
      <div>
        Next not found
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using "index" elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        Page
      </div>
      <div>
        Index
      </div>
    </div>
  </div>
</div>
`;

exports[`outlet > using "page" elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      <div>
        Page
      </div>
      <div>
        <div>
          Next
        </div>
      </div>
    </div>
  </div>
</div>
`;
